[package]
name = "teddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
indicatif = "0.17.6"
lettre = "0.10.4"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.9.3"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3.21", features = ["derive"] }
